chore(snapshot): save workspace state after merging EvidenciaController and cleanup